--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+.DS_Store
 # Created by https://www.toptal.com/developers/gitignore/api/angular,webstorm,pycharm,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=angular,webstorm,pycharm,django
 
