--- a/BackEnd/requirements.txt
+++ b/BackEnd/requirements.txt
@@ -1,4 +1,4 @@
-Django~=3.1.7
+Django==3.1.7
 attrs==20.3.0
 base58==2.1.0
 bitarray==1.2.2
@@ -23,7 +23,6 @@ lru-dict==1.1.7
 multiaddr==0.0.9
 netaddr==0.8.0
 parsimonious==0.8.1
-pkg-resources==0.0.0
 protobuf==3.15.3
 pycryptodome==3.10.1
 pyrsistent==0.17.3
