--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 .DS_Store
 # Created by https://www.toptal.com/developers/gitignore/api/angular,webstorm,pycharm,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=angular,webstorm,pycharm,django
+
+Ethereum/StanzaPoc/private/geth/
+
 ### Geth ###
 # .gitignore for Geth 0.4.16
 
